--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
 
     // Save current total clicks and timestamp, then reset the counter
     saveBtn.addEventListener('click', () => {
-      const timestamp = new Date().toLocaleString();
-      saveHistory.push(`${totalClicks} kali di ${timestamp}`);
+      const timestamp = new Date();
+      const hours = timestamp.getHours().toString().padStart(2, '0');
+      const minutes = timestamp.getMinutes().toString().padStart(2, '0');
+      const formattedTime = `${hours}:${minutes}`;
+      saveHistory.push(`${totalClicks} kali di ${formattedTime}`);
 
       // Update localStorage
       localStorage.setItem('totalClicks', totalClicks); // Save the current count
