--- a/index.html
+++ b/index.html
@@ -82,11 +82,22 @@
     // Save current total clicks and timestamp, then reset the counter
     saveBtn.addEventListener('click', () => {
       const timestamp = new Date();
-      const hours = timestamp.getHours().toString().padStart(2, '0');
-      const minutes = timestamp.getMinutes().toString().padStart(2, '0');
-      const formattedTime = `${hours}:${minutes}`;
-      saveHistory.push(`${totalClicks} kali di ${formattedTime}`);
 
+// Format hours and minutes
+const hours = timestamp.getHours().toString().padStart(2, '0');
+const minutes = timestamp.getMinutes().toString().padStart(2, '0');
+
+// Format date
+const day = timestamp.getDate().toString().padStart(2, '0');
+const month = (timestamp.getMonth() + 1).toString().padStart(2, '0'); // Months are 0-based
+const year = timestamp.getFullYear();
+
+// Combine date and time
+const formattedDate = `${day}/${month}/${year}`;
+const formattedTime = `${hours}:${minutes}`;
+
+// Combine everything
+saveHistory.push(`${totalClicks} kali di ${formattedDate} ${formattedTime}`);
       // Update localStorage
       localStorage.setItem('saveHistory', JSON.stringify(saveHistory));
 
